--- a/plugin.xml
+++ b/plugin.xml
@@ -3,7 +3,7 @@
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	id="cordova-plugin-admob-mediation-adbuddiz"
-	version="1.0.0">
+	version="1.1.0">
       
     <name>AdMob Mediation Adapter for AdBuddiz</name>
 	<description>AdMob Mediation Adapter for AdBuddiz</description>
@@ -26,11 +26,19 @@
 		<source-file src="AdBuddiz-AdMob-Java-3.1.11.jar" target-dir="libs" />
      </platform>
 
-     <platform name="ios">    
+     <platform name="ios">
+        <config-file target="config.xml" parent="/*">
+            <feature name="AdMobMediationAdBuddiz">
+              <param name="ios-package" value="AdMobMediationAdBuddiz"/>
+              <param name="onload" value="true"/>
+            </feature>
+        </config-file>
+        <header-file src="src/ios/AdMobMediationAdBuddiz.h"/>
+        <source-file src="src/ios/AdMobMediationAdBuddiz.m"/>
 		<framework src="AdBuddiz.framework" custom="true" />
 		<framework src="AdSupport.framework"/>
 		<framework src="StoreKit.framework"/>
         <framework src="AVFoundation.framework"/>
 	</platform>
-
+    
 </plugin>
