--- a/package.json
+++ b/package.json
@@ -1,35 +1,36 @@
 {
-  "name": "cordova-plugin-admob-mediation-adbuddiz",
-  "version": "1.1.0",
-  "description": "AdMob Mediation Adapter for AdBuddiz",
-  "cordova": {
-    "id": "cordova-plugin-admob-mediation-adbuddiz",
-    "platforms": [
-      "android",
-	  "ios"
-    ]
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/becvert/cordova-plugin-admob-mediation-adbuddiz.git"
-  },
-  "keywords": [
-    "ecosystem:cordova", 
-    "cordova-android", 
-    "cordova-ios", 
-    "cordova", 
-    "plugin", 
-    "ad",
-	"admob",
-    "adbuddiz",
-    "mediation"
-  ],
-  "author": {
-    "name": "Sylvain Brejeon"
-  },
-  "license": "MIT",
-  "bugs" : {
-	"url" : "https://github.com/becvert/cordova-plugin-admob-mediation-adbuddiz/issues"
-  }, 
-  "homepage" : "https://github.com/becvert/cordova-plugin-admob-mediation-adbuddiz"
+    "name": "cordova-plugin-admob-mediation-adbuddiz",
+    "version": "1.1.0",
+    "description": "AdMob Mediation Adapter for AdBuddiz",
+    "cordova": {
+        "id": "cordova-plugin-admob-mediation-adbuddiz",
+        "platforms": [
+            "android",
+            "ios"
+        ]
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/becvert/cordova-plugin-admob-mediation-adbuddiz.git"
+    },
+    "keywords": [
+        "ecosystem:cordova",
+        "cordova-android",
+        "cordova-ios",
+        "cordova",
+        "plugin",
+        "ad",
+        "admob",
+        "adbuddiz",
+        "mediation"
+    ],
+    "author": {
+        "name": "Sylvain Bréjeon",
+        "url": "https://github.com/becvert"
+    },
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/becvert/cordova-plugin-admob-mediation-adbuddiz/issues"
+    },
+    "homepage": "https://github.com/becvert/cordova-plugin-admob-mediation-adbuddiz"
 }
